# DeepCompose

./: .gitignore  LexiconParser.py  README.md  analysis.py  main.py  pyproject.toml  requirements.txt  rollout_generator.py  taxi_lexicon.txt
Grammar/: Grammar.py  GrammarInteractor.py  GrammarRules.py  LexiconExpander.py  ProductionGenerator.py  __init__.py
Intensions/: IntensionModule.py
LexicalStructures/: LexicalEntry.py  Lexicon.py  LexiconParser.py  Semantics.py  TorchSemantics.py  __init__.py
Lexicon/: LexicalStructures.py  LexiconParser.py  Semantics.py
Trainer/: Dataset.py
experiments/: analysis.py  exp_propositions.py  main.py  set_experiment.py  taxi_lexicon.txt
experiments/batch_scripts/: dc_beefy_ex04.sh  dc_beefy_ex13.sh  dc_beefy_ex23.sh  dc_crazy_ex01.sh  dc_crazy_ex02.sh  dc_crazy_ex03.sh  dc_crazy_ex04.sh  dc_crazy_ex12.sh  dc_crazy_ex13.sh  dc_crazy_ex14.sh  dc_crazy_ex23.sh  dc_crazy_ex24.sh  dc_crazy_ex34.sh  dc_lenet_ex04_lr1e-5.sh  dc_lenet_ex13_lr1e-5.sh  dc_lenet_ex23_lr1e-5.sh  dc_lenet_ex23_lr1e-6.sh  dc_nutty_ex04.sh  dc_nutty_ex13.sh  dc_nutty_ex23.sh
experiments/run_scripts/: dc_lenet_ex23_lr1e-5.sh  dc_lenet_ex23_lr1e-6.sh  dc_smallnet_ex04.sh  dc_smallnet_ex13.sh  dc_smallnet_ex23.sh  dc_test.sh
experiments/runs/Jun24_10-36-33_BenjaminsMBP26/: events.out.tfevents.1687617393.BenjaminsMBP26.4485.0
experiments/utils/: CLEVRDataset.py  EMNISTDataset.py  MDPDataset.py  __init__.py  rollout_generator.py
src/deepcompose/: __init__.py
src/deepcompose/grammar/: GrammarRules.py  (+1 more)
utils/: rollout_generator.py
(+15 files in other folders)
