[build-system]
requires = ["hatchling", "torch", "torchvision", "numpy", "matplotlib", "scikit-image", "scikit-learn"]
build-backend = "hatchling.build"

[project]
name = "deepcompose"
version = "0.0.1"
authors = [
  { name="Benjamin Spiegel", email="bspiegel@cs.brown.edu" },
]
description = "A framework for learning grounded direct compositional vector space semantic models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"